welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:7: error: '(' expected but 'else' found.
  if else (weekday==false){a=true}
     ^sleepIn:9: error: illegal start of simple expression
  }else{
  ^sleepIn:9: error: ';' expected but 'else' found.
  }else{
   ^sleepIn:14: error: Unmatched closing brace '}' ignored here
 }
 ^